clusters/homelab/tools/bitwarden.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  labels:
    app: bitwarden
  namespace: tools
spec:
  selector:
    matchLabels:
      app: bitwarden
      tier: media
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bitwarden
        tier: media
    spec:
      containers:
      - image: vaultwarden/server
        name: bitwarden
        ports:
        - containerPort: 80
          name: bitwarden
        volumeMounts:
        - name: bitwarden-persistent-storage
          mountPath: /data
        imagePullPolicy: Always
      volumes:
      - name: bitwarden-persistent-storage
        persistentVolumeClaim:
          claimName: bitwarden-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  namespace: tools
spec:
  ingressClassName: nginx
  rules:
  - host: vaultwarden.dyslexicjedi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bitwarden
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app: bitwarden
    kubernetes.io/name: "bitwarden"
  namespace: tools
spec:
  selector:
    app: bitwarden
  ports:
  - name: bitwarden
    port: 80
    targetPort: 80
